use sample data if data.length = 0; recreate iframe  when preview assets in case that some types are not supported. fix assets file card overflow issue

--- a/src/styl/dev.styl
+++ b/src/styl/dev.styl
@@ -529,6 +529,14 @@ small.hint
   font-size: 0.9em
   .pull-right
     line-height: 20px
+    position: absolute
+    right: 10px
+  i
+    display: inline-block
+    width: 110px
+    overflow: hidden
+    white-space: nowrap
+    text-overflow: ellipsis
 
 #assets-preview
   position: fixed
@@ -546,4 +554,7 @@ small.hint
     height: 80%
     background: #fff
     border-radius: 2px
-
+  .iframe, iframe
+    width: 100%
+    height: 100%
+    border: none
